# magneto-UI

./: .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.dev  Dockerfile.frontend  docker-compose.yml  package-lock.json  package.json  test-protection-rules.txt
Magneto/oracleFromBehavior/: imageUtilities.py  pyproject.toml
Magneto/oracleFromBehavior/backButton/: SSIM-withoutReport.py
Magneto/oracleFromBehavior/backButton/23/: org.kiwix.kiwixmobile-2.4-23-User-Trace-10.xml  org.kiwix.kiwixmobile-2.4-23-User-Trace-16.xml  org.kiwix.kiwixmobile-2.4-23-User-Trace-4.xml  org.kiwix.kiwixmobile-2.4-23-User-Trace-5.xml  org.kiwix.kiwixmobile-2.4-23-User-Trace-6.xml  org.kiwix.kiwixmobile-2.4-23-User-Trace-7.xml  org.kiwix.kiwixmobile-2.4-23-User-Trace-9.xml
Magneto/oracleFromBehavior/languageDetection/: detectLanguageAll.py  detectLanguageNext.py
Magneto/oracleFromBehavior/languageDetection/21/: Execution-21.json  org.kiwix.kiwixmobile-2.4-21-User-Trace-10.xml  org.kiwix.kiwixmobile-2.4-21-User-Trace-11.xml  org.kiwix.kiwixmobile-2.4-21-User-Trace-13.xml  org.kiwix.kiwixmobile-2.4-21-User-Trace-4.xml  org.kiwix.kiwixmobile-2.4-21-User-Trace-5.xml  org.kiwix.kiwixmobile-2.4-21-User-Trace-7.xml  org.kiwix.kiwixmobile-2.4-21-User-Trace-8.xml
Magneto/oracleFromBehavior/languageDetection/22/: Execution-22.json  com.ichi2.anki-2.9alpha36-22-User-Trace-10.xml  com.ichi2.anki-2.9alpha36-22-User-Trace-11.xml  (+6 more)
Magneto/oracleFromBehavior/themeChange/: labelPredictor.py  themeCheck.py
Magneto/oracleFromBehavior/userEnteredData/: findTriggerCheckInput.py
backend/: app.js  (+4 more)
(+123 files in other folders)
