[tool.poetry]
name = "oraclefrombehavior"
version = "0.1.0"
description = ""
authors = ["G14"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
scikit-image = "^0.19.1"
opencv-python = "^4.5.5"
imutils = "^0.5.4"
pytesseract = "^0.3.8"
colour-science = "^0.4.3"
scikit-learn = "^1.0.2"
lxml = "^4.8.0"
pycountry = "^22.1.10"
polyglot = "^16.7.4"
PyICU = "^2.8.1"
pycld2 = "^0.41"
torch = "1.10.2"
torchvision = "^0.11.3"
numpy = "<1.24"
matplotlib = "^3.9.2"
reportlab = "^3.6.12"
fpdf = "^1.7.2" 

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
